--- a/PreOrclFrontEnd/Views/Casos/Edit.cshtml
+++ b/PreOrclFrontEnd/Views/Casos/Edit.cshtml
@@ -1,6 +1,6 @@
 ﻿@model PreOrclFrontEnd.ViewModels.VwModelCasos
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Editar";
 
     List<SelectListItem> listaCategorias = (ViewBag.listaCategorias as List<SelectListItem>);
     List<SelectListItem> listaTipos = (ViewBag.listaTipos as List<SelectListItem>);
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="~/templateAdmin/assets/css/cs-skin-elastic.css">
     <link rel="stylesheet" href="~/templateAdmin/assets/css/style.css">
     <link rel="stylesheet" href="~/templateAdmin/assets/css/lib/chosen/chosen.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-datetimepicker/2.5.20/jquery.datetimepicker.css" />
 }
 <div class="breadcrumbs">
     <div class="breadcrumbs-inner">
@@ -48,10 +49,10 @@
             <div class="col-sm-12">
                 <div class="card">
                     <div class="card-header">
-                        <strong>Crear Caso</strong> <small></small>
+                        <strong>Editar Caso</strong> <small></small>
                     </div>
 
-                    <form asp-action="Edit" enctype="multipart/form-data" class="submit-formdata" @*asp-antiforgery="true"*@ id="createForm" method="post" >
+                    <form asp-action="Edit" enctype="multipart/form-data" class="submit-formdata" @*asp-antiforgery="true" *@ id="createForm" method="post">
                         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                         <div class="card-body card-block">
                             <div class="form-group">
@@ -66,7 +67,7 @@
                                 <label asp-for="Casos.FechaApertura"></label>
                                 <div class="input-group">
                                     <div class="input-group-addon"><i class="fa fa-calendar"></i></div>
-                                    <input asp-for="Casos.FechaApertura" class="form-control">
+                                    <input asp-for="Casos.FechaApertura" disabled="disabled" type="text" class="form-control date-time">
                                 </div>
                                 <span asp-validation-for="Casos.FechaApertura" class="text-danger"></span>
                             </div>
@@ -136,41 +137,65 @@
                                     <label asp-for="Casos.FechaCierre"></label>
                                     <div class="input-group">
                                         <div class="input-group-addon"><i class="fa fa-calendar"></i></div>
-                                        <input asp-for="Casos.FechaCierre" class="form-control">
+                                        <input asp-for="Casos.FechaCierre" type="text" class="form-control date-time">
                                     </div>
                                     <span asp-validation-for="Casos.FechaCierre" class="text-danger"></span>
                                 </div>
                             </div>
                             <div class="row form-group">
-                                <div class="col col-md-12">
-                                    <label class="label">Documentos</label>
-                                </div>
+                                <div class="col-md-12 toclonate">
+                                    @foreach (var itemListadoDocumentos in Model.ListadoDocumentos)
+                                    {
 
-                                @foreach (var itemListadoDocumentos in Model.ListadoDocumentos)
-                                {
-                                    <div class="col col-md-12">
-                                        <input asp-for="ListadoDocumentos[Model.ListadoDocumentos.IndexOf(itemListadoDocumentos)].IdDocumento" type="hidden" />
-                                        <input asp-for="ListadoDocumentos[Model.ListadoDocumentos.IndexOf(itemListadoDocumentos)].IdCaso" type="hidden" />
-                                        <input asp-for="ListadoDocumentos[Model.ListadoDocumentos.IndexOf(itemListadoDocumentos)].CreatedAt" type="hidden" />
-                                        <input asp-for="ListadoDocumentos[Model.ListadoDocumentos.IndexOf(itemListadoDocumentos)].UpdatedAt" type="hidden" />
-                                        <input asp-for="ListadoDocumentos[Model.ListadoDocumentos.IndexOf(itemListadoDocumentos)].Nombre" type="hidden" />
-                                        <input asp-for="ListadoDocumentos[Model.ListadoDocumentos.IndexOf(itemListadoDocumentos)].Url" type="hidden" />
-                                        <input asp-for="ListadoDocumentos[Model.ListadoDocumentos.IndexOf(itemListadoDocumentos)].Archivo" type="hidden" />
+                                        <div class="row col-md-12 listado-documentos" style="margin-bottom:7px;">
+                                            <div class="col-sm-3">
+                                                <input asp-for="ListadoDocumentos[Model.ListadoDocumentos.IndexOf(itemListadoDocumentos)].IdDocumento" type="hidden" />
+                                                <input asp-for="ListadoDocumentos[Model.ListadoDocumentos.IndexOf(itemListadoDocumentos)].IdCaso" type="hidden" />
+                                                <input asp-for="ListadoDocumentos[Model.ListadoDocumentos.IndexOf(itemListadoDocumentos)].CreatedAt" type="hidden" />
+                                                <input asp-for="ListadoDocumentos[Model.ListadoDocumentos.IndexOf(itemListadoDocumentos)].UpdatedAt" type="hidden" />
+                                                <input asp-for="ListadoDocumentos[Model.ListadoDocumentos.IndexOf(itemListadoDocumentos)].Nombre" type="hidden" />
+                                                <input asp-for="ListadoDocumentos[Model.ListadoDocumentos.IndexOf(itemListadoDocumentos)].Url" type="hidden" />
+                                                <input asp-for="ListadoDocumentos[Model.ListadoDocumentos.IndexOf(itemListadoDocumentos)].Archivo" type="hidden" />
 
-                                        <a asp-action="Download" class="form-control-label" asp-route-id="@itemListadoDocumentos.IdDocumento">@itemListadoDocumentos.Nombre</a>
+                                                <a asp-action="Download" class="form-control-label" asp-route-id="@itemListadoDocumentos.IdDocumento">@itemListadoDocumentos.Nombre</a>
+                                            </div>
+                                            <div class="col-sm-3">
+                                                <button type="button" onclick="remover(this)" class="btn btn-sm btn-danger remover">X</button>
+                                            </div>
+                                        </div>
+
+                                    }
+                                    <button type="button" class="btn btn-primary" style="margin-bottom:7px;" onclick="clonar()">Agregar Documento</button>
+                                    <div class="row col-md-12 file-requerido" style="margin-bottom:7px;display:none">
+                                        <div class="col-sm-3">
+                                            <div class="input-group">
+                                                <input asp-for="Documentos" class="file0" type="file" />
+                                            </div>
+                                            <span asp-validation-for="Documentos" class="text-danger"></span>
+                                        </div>
+                                        <div class="col-sm-3">
+
+                                        </div>
                                     </div>
-                                }
-                            </div>
-                            <div class="row form-group">
-                                <div class="row col col-md-12">
-                                    <input asp-for="Documentos" type="file" />
-                                    <span asp-validation-for="Documentos" class="text-danger"></span>
+                                    <div class="row col-md-12 file-norequerido" style="margin-bottom:7px;">
+                                        <div class="col-sm-3">
+                                            <div class="input-group">
+                                                <input onclick="agregarId(this)" class="file1" type="file" />
+                                            </div>
+                                            <span asp-validation-for="Documentos" class="text-danger"></span>
+                                        </div>
+                                        <div class="col-sm-3">
+
+                                        </div>
+                                    </div>
+
+
+
                                 </div>
-                                <div class="row col col-md-12">
-                                    <input asp-for="Documentos" type="file" />
-                                    <span asp-validation-for="Documentos" class="text-danger"></span>
-                                </div>
-                            </div>
+
+
+                                    </div>
+                           
                             <div class="row form-group">
                                 <div class="col col-md-3">
                                     <label asp-for="Casos.Tipo" class="form-control-label"></label>
@@ -191,13 +216,14 @@
                                 </div>
                             </div>
                             <input asp-for="Casos.IdCaso" type="hidden" />
+
                             <input asp-for="Casos.CreatedAt" type="hidden" />
                             <input asp-for="Casos.UpdatedAt" type="hidden" />
                             <input asp-for="Casos.InactivatedAt" type="hidden" />
                             <input asp-for="Casos.Inactivo" type="hidden" />
                             <div class="row form-group">
                                 <div class="col-sm-12 text-right">
-                                    <input type="button" onclick="GuardarNotificacion('.submit-formdata','@Url.Action("Create")','@Url.Action("Index")')" value="Guardar" class="btn btn-default" />
+                                    <input type="button" onclick="validarDocumentosVacios('.submit-formdata','@Url.Action("Create")','@Url.Action("Index")')" value="Guardar" class="btn btn-default" />
                                 </div>
                             </div>
                         </div>
@@ -219,12 +245,15 @@
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
     <script src="~/lib/Microsoft.jQuery.Unobtrusive.Ajax/jquery.unobtrusive-ajax.min.js"></script>
     <script src="~/js/custoSweetAlertAjax.js"></script>
- 
     <script src="~/templateAdmin/assets/js/lib/chosen/chosen.jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-datetimepicker/2.5.20/jquery.datetimepicker.full.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-maskmoney/3.0.2/jquery.maskMoney.min.js"></script>
+    <script src="~/js/custoDateTimePicker.js"></script>
+
     <script>
         jQuery(document).ready(function () {
             jQuery(".standardSelect").chosen({
-            
+
                 no_results_text: "No se encontraron registros!",
                 width: "100%"
             });
@@ -236,6 +265,76 @@
 
 
         });
+
+        jQuery(".remover").on("click", function () {
+            var padre = jQuery(this).parent().parent();
+            padre.remove();
+        });
+
+        function remover(selector) {
+            var padre = jQuery(selector).parent().parent();
+            padre.remove();
+        }
+
+        function clonar() {
+
+            jQuery(".toclonate").append(' <div class="row col-md-12" style="margin-bottom:7px;">' +
+                '<div class="col-sm-3">' +
+                '<div class="input-group">' +
+                '<input id="Documentos" name="Documentos" type="file" />' +
+                ' </div>' +
+                '  <span class="text-danger"></span>' +
+                '</div>' +
+                '<div class="col-sm-3">' +
+                '<button type="button" onclick="remover(this)" class="btn btn-sm btn-danger remover">X</button>' +
+                '</div>' +
+                '</div>');
+
+
+        }
+
+        function validarDocumentosVacios(selector,urlRefrescar,urlIndex) {
+
+            var docs = jQuery(".listado-documentos").length;
+         //   alert(jQuery(".file1").val()==="");
+            if (docs === 0) {
+                if (jQuery(".file1").val() === "") {
+                    jQuery(".file-requerido").show();
+
+                    jQuery(".file-norequerido").remove();
+                }
+            } else {
+
+                if (jQuery(".file1").val() === "") {
+                    jQuery(".file1").removeAttr("name");
+                    jQuery(".file1").removeAttr("id");
+                }
+                
+                jQuery(".file-requerido").hide();
+                if (jQuery(".file-norequerido").length===0)
+                jQuery(".toclonate").append(' <div class="row col-md-12 file-norequerido" style="margin-bottom:7px;">' +
+                    '<div class="col-sm-3">' +
+                    '<div class="input-group">' +
+                    '<input onclick="agregarId(this)" class="file1" type="file" />' +
+                    ' </div>' +
+                    '  <span class="text-danger"></span>' +
+                    '</div>' +
+                    '<div class="col-sm-3">' +
+                  
+                    '</div>' +
+                    '</div>');
+            }
+
+            GuardarNotificacion(selector, urlRefrescar,urlIndex);
+
+        }
+
+
+        function agregarId(selector) {
+            jQuery(".file1").attr("name", "Documentos");
+            jQuery(".file1").attr("id", "Documentos");
+        }
+
     </script>
 
 }
