--- a/PreOrclFrontEnd/Views/Casos/Edit.cshtml
+++ b/PreOrclFrontEnd/Views/Casos/Edit.cshtml
@@ -144,6 +144,7 @@
                             </div>
                             <div class="row form-group">
                                 <div class="col-md-12 toclonate">
+                                    <h3>Documentos</h3>
                                     @foreach (var itemListadoDocumentos in Model.ListadoDocumentos)
                                     {
 
